tuidom-macros/tests/ui/spread_not_first.stderr
error: `..base` must come first, since later entries override it
 --> tests/ui/spread_not_first.rs:7:9
  |
7 |         ..base,
  |         ^
