tuidom-macros/tests/ui/spread_not_first.rs
use tuidom_macros::style;

fn main() {
    let base = ();
    let _ = style! {
        color: white,
        ..base,
    };
}
